--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# db source url
+spring.datasource.url=jdbc:mysql://localhost:3306/study?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 
+# db response name
+spring.datasource.username=root
+
+# db response password
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
